# uodm

./: .mise.toml  .pdm-python  README.md  example.py  pyproject.toml  speedtest.py  speedtest.txt
src/uodm/: __init__.py  change_streams.py  file_motor.py  file_motor_filtering.py  sqlite_motor.py  types.py  uodm.py
tests/: __init__.py  test_change_streams.py  test_file_motor.py  test_file_motor_filtering.py  test_mongodb_fallback.py  test_sqlite.py  test_sqlite_motor.py
