[project]
name = "uodm"
version = "0.1.0"
description = "ultraminimalistic Python library for simple object-document mappint for asyncronous mongodb"
authors = [
    {name = "Grigory Bakunov", email = "bobuk@rubedo.cloud"},
]
dependencies = [
    "pydantic>=2.7.0",
    "motor>=3.4.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Unlicense"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
