[project]
name = "uodm"
version = "0.1.9"
description = "ultraminimalistic Python library for simple object-document mappint for asyncronous mongodb"
authors = [{ name = "Grigory Bakunov", email = "bobuk@rubedo.cloud" }]
dependencies = ["pydantic>=2.10.2", "motor>=3.4.0"]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Unlicense" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
    "mongomock>=4.3.0",
    "bson>=0.5.10",
    "pymongo>=4.9.2",
    "motor>=3.6.0",
    "pytest-asyncio>=0.24.0",
]
